--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
-    "react-toastify": "^9.0.8"
+    "react-ionicons": "^4.2.0",
+    "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.5",
+    "styled-icons": "^10.45.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.7.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "sass": "^1.54.4",
